# backrooms-muffler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.cursor/: hooks.json
.cursor/hooks/: guard-clean.ps1  post-edit-hint.ps1  session-start.ps1
.cursor/rules/: backrooms-muffler-project.mdc  backrooms-ui.mdc  build-and-test.mdc  juce-realtime-dsp.mdc  mcp-tool-routing.mdc
.github/workflows/: build.yml
assets/fonts/: OFL-license.txt
assets/ui/: ATTRIBUTION.md
docs/: BUILD.md  DSP.md  UI.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: BackroomsProcessor.cpp  BackroomsProcessor.h
source/ui/: BackroomsLookAndFeel.h
tests/: BackroomsProcessorTests.cpp  CMakeLists.txt
